--- a/src/modules/PhonePage/PhonePage.module.scss
+++ b/src/modules/PhonePage/PhonePage.module.scss
@@ -1,7 +1,7 @@
 @mixin pageGrid {
   grid-template-columns: repeat(1, 1fr);
   row-gap: 40px;
-
+  column-gap: 16px;
   display: grid;
   @media (min-width: 640px) {
     grid-template-columns: repeat(4, 1fr);
@@ -15,7 +15,6 @@
 .main {
   margin: 150px auto;
   max-width: 1200px;
-
   padding: 16px 0;
 
   &__header {
