--- a/src/modules/shared/components/SliderComponent/SliderComponent.module.scss
+++ b/src/modules/shared/components/SliderComponent/SliderComponent.module.scss
@@ -1,18 +1,21 @@
 .slider__wrapper {
   width: 100%;
-  margin: 0 auto;
-  padding-inline: 16px;
-  padding-top: 95px;
+  margin: 56px auto;
+  // padding: 95px 16px 0 16px;
 
   @media (min-width: 640px) {
     width: 100%;
-    margin: 0 auto;
-    padding-inline: 24px;
+    margin: 64px auto;
+    // padding: 95px 24px 0 24px;
   }
 
   @media (min-width: 1200px) {
     width: 100%;
-    margin: 0 auto;
-    padding-inline: 32px;
+    margin: 80px auto;
+    // padding: 95px 32px 0 32px;
   }
+}
+
+.slider__header {
+  margin-bottom: 24px;
 }
