--- a/src/scssStyles/blocks/_page.scss
+++ b/src/scssStyles/blocks/_page.scss
@@ -6,6 +6,13 @@
   &__main {
     flex-grow: 1;
     margin: 0 auto;
+    // margin: 0 16px;
+    // @media(min-width: 640px){
+    //   margin: 0 24px;
+    // }
+    // @media(min-width: 1200px){
+    //   margin: 0 auto;
+    // }
     max-width: 1136px;
   }
 }
