--- a/src/modules/OfStock/Desert/Desert.module.scss
+++ b/src/modules/OfStock/Desert/Desert.module.scss
@@ -1,15 +1,23 @@
+@mixin onMobile {
+  @media (max-width: 639px) {
+    @content;
+  }
+}
 .desert {
   position: relative;
   height: 8rem;
   overflow: hidden;
+
+  @include onMobile {
+    height: 5rem;
+  }
 }
 
 .desert .tumbleweed {
   position: absolute;
   top: 0;
   left: -5rem;
-  background: url(https://cdn-icons-png.flaticon.com/512/1171/1171228.png)
-    no-repeat center;
+  background: url(https://cdn-icons-png.flaticon.com/512/1171/1171228.png) no-repeat center;
   background-size: cover;
   width: 5rem;
   height: 5rem;
@@ -17,10 +25,22 @@
     jumping 1.5s infinite,
     rolling 5s linear infinite,
     rotating 2s linear infinite;
+
+  @include onMobile {
+    left: -2.5rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    animation:
+      jumping 1.5s infinite,
+      rolling 2.5s linear infinite,
+      rotating 2s linear infinite;
+  }
 }
+
 .tumbleweed:nth-child(2) {
   animation-delay: 2.5s;
 }
+
 .tumbleweed:nth-child(3) {
   animation-delay: 4s;
 }
@@ -30,18 +50,25 @@
     top: 0rem;
     animation-timing-function: ease-in;
   }
+
   25% {
     top: 3rem;
+
     animation-timing-function: ease-out;
   }
+
   50% {
     top: 1rem;
+
     animation-timing-function: ease-in;
   }
+
   75% {
     top: 3rem;
+
     animation-timing-function: ease-out;
   }
+
   100% {
     top: 0rem;
     animation-timing-function: ease-in;
@@ -52,6 +79,7 @@
   0% {
     left: -5rem;
   }
+
   100% {
     left: 100%;
   }
@@ -61,6 +89,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
