--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -4,44 +4,20 @@
 .Cart {
   display: flex;
   flex-direction: column;
-  background-color: $hover-bg-color;
-  min-height: 90vh; // temporal 💥!! 
-  
-  max-width: 1200px;
+  // background-color: $hover-bg-color;
+
+  // max-width: 1136px;
   margin: 0 auto;
-  padding-inline: 32px;
+  padding: 0 32px;
+  padding-top: 110px; // header+40px
+  padding-bottom: 56px; 
+
+
   @include onDesktop {
     padding-inline: 24px;
   }
   @include onTablet {
     padding-inline: 16px;
-  }
-
-  &__linkBack {
-        margin-top: 64px; // temporal 💥!! jast for Cart
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    margin-bottom: 16px;
-    @include onTablet {
-      font-size: 24px;
-  }
-    
-  }
-
-  &__backBtn {
-    font-family: Mont;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    color: $secondary-color;
-    @include onTablet {
-      font-size: 12px;
-  }
-    &:hover {
-      color: $primary-color;
-    }
   }
 
   &__title {
@@ -51,13 +27,15 @@
     font-weight: 800;
     line-height: 41px;
     letter-spacing: -0.32px;
-    margin-bottom: 32px;
     letter-spacing: -0.48px;
-    @include onTablet {
-     font-size: 32px;
-    }
+    margin-bottom: 32px;
+    margin-top: 16px;
 
-    
+    @include onTablet {
+      font-size: 32px;
+      margin-top: 24px;
+
+    }
   }
 
   &__container {
@@ -89,9 +67,4 @@
   }
 }
 
-.ChevronLeft {
-  path {
-    fill: $primary-color;
-  }
-}
 
