--- a/src/modules/shared/components/FooterConponent/Footer.module.scss
+++ b/src/modules/shared/components/FooterConponent/Footer.module.scss
@@ -4,6 +4,7 @@
 
 .container {
   width: 100%;
+  border-top: 1px solid $elements-color ;
 }
 
 .footer {
@@ -12,8 +13,9 @@
   flex-direction: row;
   margin: 0 auto;
   gap: 32px;
-  max-width: 1200px;
+  max-width: 1136px;
   padding: 32px 32px;
+  // border-top: 1px solid $elements-color ;
 
   @include onTablet {
     padding: 32px 16px;
