Phone details basics (#38)
* in_process

* ui_part_of_phone_details

* first_iteration_of_phone_page

--- a/src/modules/shared/components/breadcrumbs/Breadcrumps.module.scss
+++ b/src/modules/shared/components/breadcrumbs/Breadcrumps.module.scss
@@ -4,6 +4,9 @@
   display: flex;
   align-items: center;
   color: $secondary-color;
+  margin-top: 100px;
+  margin-bottom: 72px;
+  margin-left: 32px;
 }
 
 .homeIcon {
@@ -33,7 +36,7 @@
   }
 
   &.active {
-    color: black;
+    color: $primary-color;
     pointer-events: none;
   }
 }
