--- a/src/modules/CartPage/CheckoutModal/CheckoutModal.module.scss
+++ b/src/modules/CartPage/CheckoutModal/CheckoutModal.module.scss
@@ -19,6 +19,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   background-color: #fafafa;
@@ -27,7 +28,7 @@
   height: 50%;
   width: 50%;
   border-radius: 8px;
-  box-shadow: 5px 5px 10px 2px rgba(0, 0, 1, 0.8);
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.8);
 }
 
 .loader {
@@ -50,8 +51,7 @@
   border: 4px double ;
   box-sizing: border-box;
   box-shadow:  2px 2px 2px 1px rgba(0, 0, 0, .1);
-
-  animation: coin-flip 10s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  animation: coin-flip 4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 @keyframes coin-flip {
   0%, 100% {
@@ -86,6 +86,7 @@
 
 
 
+
 .home {
   text-align: center;
   margin-top: 20px;
@@ -113,29 +114,5 @@
 }
 
 .home:hover .link {
-  color: aliceblue;
+  color: white;
 }
-//
-.close {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    background-color: transparent;
-    padding: 0;
-    border: none;
-  }
-
-  .closeIcon {
-    flex-shrink: 0;
-    cursor: pointer;
-    path {
-      fill: $icons-color;
-    }
-
-    &:hover {
-      path {
-        transition-duration: 0.3s;
-        fill: $primary-color;
-      }
-    }
-  }
