--- a/src/modules/CartPage/cartItem/CartItem.module.scss
+++ b/src/modules/CartPage/cartItem/CartItem.module.scss
@@ -47,6 +47,10 @@
     background-color: transparent;
     padding: 0;
     border: none;
+    transition: scale 0.4s;
+    &:hover{
+      scale: 1.1;
+    }
   }
 
   &__closeIcon {
@@ -119,12 +123,26 @@
     width: 32px;
     height: 32px;
     cursor: pointer;
+    transition: border-color 0.4s;
 
     &:hover {
       border-color: $primary-color;
     }
   }
+  //
+  &__quantityBtn:disabled {
+    border-color: $icons-color;
+    cursor: default;
 
+    &:hover {
+      border-color: $icons-color;
+    }
+  }
+
+  &__minusIcon:disabled path {
+  fill: $icons-color;
+}
+  //
   &__quantityValue {
     display: inline-block;
     text-align: center;
@@ -155,3 +173,4 @@
     fill: $icons-color;
   }
 }
+
