--- a/src/modules/shared/components/SliderComponent/SliderComponent.module.scss
+++ b/src/modules/shared/components/SliderComponent/SliderComponent.module.scss
@@ -17,5 +17,13 @@
 }
 
 .slider__header {
+  font-weight: 700;
+  font-size: 22px;
   margin-bottom: 24px;
+  max-width: 50%;
+  @media (min-width: 640px) {
+    width: 100%;
+    font-size: 32px;
+  }
 }
+
