--- a/src/scssStyles/_typography.scss
+++ b/src/scssStyles/_typography.scss
@@ -1,21 +1,21 @@
-@import './mixins';
+@import "./mixins";
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont";
   font-weight: 400;
   font-style: normal;
   src: url(../fonts/Mont-Regular.ttf);
 }
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont";
   font-weight: 600;
   font-style: normal;
   src: url(../fonts/Mont-SemiBold.ttf);
 }
 
 @font-face {
-  font-family: 'Mont';
+  font-family: "Mont";
   font-weight: 700;
   font-style: normal;
   src: url(../fonts/Mont-Bold.ttf);
@@ -29,7 +29,7 @@ h5,
 h6,
 p,
 button {
-  font-family: 'Mont';
+  font-family: "Mont";
 }
 
 h1 {
