--- a/src/modules/CartPage/CartPage.module.scss
+++ b/src/modules/CartPage/CartPage.module.scss
@@ -1,29 +1,47 @@
 @import "../../scssStyles/colors";
 @import "../../scssStyles/mixins";
 
-@mixin onBigScreen {
-  @media (min-width: 1200px) {
-    @content;
-  }
-}
-
 .Cart {
   display: flex;
   flex-direction: column;
+  background-color: $hover-bg-color;
+  min-height: 90vh; // temporal 💥!! 
   
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 0 32px;
-  padding-top: 110px; // header+40px
-  padding-bottom: 56px; 
-  @include onBigScreen{
-    width: 1136px;
-  }
-
+  padding-inline: 32px;
   @include onDesktop {
     padding-inline: 24px;
   }
   @include onTablet {
     padding-inline: 16px;
+  }
+
+  &__linkBack {
+        margin-top: 64px; // temporal 💥!! jast for Cart
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    margin-bottom: 16px;
+    @include onTablet {
+      font-size: 24px;
+  }
+    
+  }
+
+  &__backBtn {
+    font-family: Mont;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    color: $secondary-color;
+    @include onTablet {
+      font-size: 12px;
+  }
+    &:hover {
+      color: $primary-color;
+    }
   }
 
   &__title {
@@ -33,15 +51,13 @@
     font-weight: 800;
     line-height: 41px;
     letter-spacing: -0.32px;
-    letter-spacing: -0.48px;
     margin-bottom: 32px;
-    margin-top: 16px;
-
+    letter-spacing: -0.48px;
     @include onTablet {
-      font-size: 32px;
-      margin-top: 24px;
-
+     font-size: 32px;
     }
+
+    
   }
 
   &__container {
@@ -73,4 +89,9 @@
   }
 }
 
+.ChevronLeft {
+  path {
+    fill: $primary-color;
+  }
+}
 
