--- a/src/modules/PhoneDetailsPage/PhoneDetails/PhoneDetails.module.scss
+++ b/src/modules/PhoneDetailsPage/PhoneDetails/PhoneDetails.module.scss
@@ -78,6 +78,7 @@ $mobile_color-gold: #fcdbc1;
 }
 
 .price {
+  font-family: 'Mont';
   .salePrice {
     font-weight: 800;
     font-size: 32px;
@@ -154,25 +155,50 @@ $mobile_color-gold: #fcdbc1;
   box-shadow: 0 0 0 1px $primary-color;
 }
 
-.head {
-  position: absolute;
-    margin-top: -460px;
-    width: 288px;
-    line-height: 30.8px;
-    font-size: 22px;
+.buttonsContainer {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+
+  @include onMobile {
+    justify-content: center;
+  }
+  @include onDesktop {
+    justify-content: flex-start;
+  }
 
   @include onTablet {
-    max-width: 1199px;
-    margin-left: -420px;
-    margin-top: -50px;
+    justify-content: flex-start;
+  }
+
+  @include onDesktop {
+    justify-content: flex-start;
+  }
+}
+
+.head {
+  position: absolute;
+
+  @include onMobile {
+      left: 10%;
+      top: 150px;
+      font-size: 22px;
+      line-height: 31px;
+  }
+
+  @include onTablet {
+    left: 100px;
+    font-weight:800;
+    top: 180px;
     width: 592px;
   }
 
   @include onDesktop {
-    width: 1136px;
+    width: 1200px;
+    white-space: nowrap;
     font-size: 32px;
-    margin-left: -600px;
-    margin-top: -80px;
+    top: 170px;
+    left: 390px;
     font-family: 'Mont';
     font-weight: 800;
     line-height: 41px;
