--- a/src/modules/PhoneDetailsPage/PhoneDetailsPage.module.scss
+++ b/src/modules/PhoneDetailsPage/PhoneDetailsPage.module.scss
@@ -33,7 +33,7 @@
     }
 
     @include onTablet {
-      grid-column: 3 / 6;
+      grid-column: 2 / 6;
     }
 
     @include onDesktop {
@@ -55,5 +55,36 @@
       grid-column: 13 / -1;
       margin-left: 25px;
     }
+  }
+}
+
+.sliderContainer {
+  top: 50px;
+  margin: 0 auto;
+  width: 273px;
+
+  @include onTablet {
+    width: 570px;
+    margin: 0 auto;
+  }
+
+  @include onDesktop {
+    width: 1136px;
+    margin: 0 auto;
+  }
+}
+
+.breadcrumps {
+  margin-bottom: 50px;
+  margin-left: 0;
+
+  @include onTablet {
+    max-width: 1136px;
+    margin-left: 100px;
+  }
+
+  @include onDesktop {
+    max-width: 1136px;
+    margin-left: 0px;
   }
 }
