--- a/src/modules/PhonePage/PhonePage.module.scss
+++ b/src/modules/PhonePage/PhonePage.module.scss
@@ -19,10 +19,16 @@
 
   &__header {
     font-size: 32px;
+    &_invisible {
+      display: none;
+    }
   }
 
   &__models {
     margin-top: 8px;
+    &_invisible {
+      display: none;
+    }
   }
 
   &__dropdown {
@@ -30,6 +36,10 @@
     flex-direction: row;
     gap: 16px;
     margin-top: 32px;
+
+    &_invisible {
+      display: none;
+    }
   }
 
   @media (min-width: 640px) {
