--- a/src/modules/NotFoundPage/NotFoundPage.module.scss
+++ b/src/modules/NotFoundPage/NotFoundPage.module.scss
@@ -43,7 +43,7 @@ $button-text-color: #fff;
   text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 30px;
 }
 
 @keyframes blink {
@@ -72,6 +72,7 @@ $button-text-color: #fff;
 
 .text-4xl {
   font-size: $font-size-large;
+  line-height: 100%;
 
   @media (min-width: $media-breakpoint-sm) {
     font-size: $font-size-xl;
@@ -95,10 +96,12 @@ $button-text-color: #fff;
 
   &--primary {
     color: $button-text-color;
-    height: $primary-button-height;
-    width: $primary-button-width;
+    // height: $primary-button-height;
+    padding: 10px 14px;
+    width: 40%;
     border: 1px solid $button-border-color;
     background-color: $accent-color;
+
     &:hover {
       background-color: $button-hover-bg-color;
     }
