--- a/src/modules/shared/components/ProductCard/ProductCard.module.scss
+++ b/src/modules/shared/components/ProductCard/ProductCard.module.scss
@@ -11,8 +11,8 @@
   border: 1px solid $elements-color;
   border-radius: 8px;
   color: $primary-color;
-
-
+  box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.0);
+  transition: box-shadow 0.5s ease;
   min-width: 229px;
   max-width: 288px;
   width: 272px;
@@ -30,18 +30,25 @@
   }
 
   &:hover {
-    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.5);
   }
 
   &__preview {
     object-fit: contain;
     min-width: 148px;
     min-height: 129px;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   &__title {
     margin-top: 16px;
     font-weight: 600;
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   &__price {
