--- a/src/modules/shared/components/Contacts/Contacts.module.scss
+++ b/src/modules/shared/components/Contacts/Contacts.module.scss
@@ -1,14 +1,10 @@
-@import '../../../../modules/HomePage/MainSlider/Slider_mixins.scss';
-
-
-
+@import "../../../../modules/HomePage/MainSlider/Slider_mixins.scss";
 
 .content {
   width: 1200px;
+  border: 1px solid #000;
   margin-top: 168px;
 }
-
-
 
 .team_member {
   margin-right: 5px;
@@ -17,16 +13,13 @@
 
   background-color: #fff;
   border-radius: 10px;
-  
-  transition: transform 0.3s ease-in-out;
+
+  transition: transform 0.5s ease-in-out;
 }
 
-
-
 .team_member:hover img {
-  border-radius: 0px;
+  border-radius: 20%;
   overflow: hidden;
-
 }
 
 .team_member img {
@@ -34,10 +27,10 @@
   overflow: hidden;
   width: 300px;
   height: 300px;
-  border-radius: 50%;
   object-fit: cover;
-  margin:auto;
-  transition:  0.3s ease-in-out;
+  border-radius: 50%;
+  margin: auto;
+  transition: 0.5s ease-in-out;
 }
 
 .team_member h3 {
@@ -50,32 +43,40 @@
   margin-bottom: 10px;
 }
 
-
-
 .i {
   width: 30px;
   height: 30px;
   transition: 0.5s;
 }
 
-.s{
+.t {
+  width: 30px;
+  height: 30px;
+  transition: 0.5s;
+}
+
+.s {
   width: 30px;
   height: 30px;
   transition: 0.5s;
 }
 
 .l {
-  margin-right: 5px ;
+  margin-right: 5px;
   transition: 0.5s;
 }
 
-
-.i:hover{
+.i:hover {
   transform: scale(1.2);
-  fill: #007AFF;
+  fill: #0077b5;
 }
 
-.s:hover{
+.t:hover {
   transform: scale(1.2);
-  fill: #808080;
+  fill: #229ed9;
+}
+
+.s:hover {
+  transform: scale(1.2);
+  fill: #6e5494;
 }
