--- a/src/modules/shared/components/Contacts/Contacts.module.scss
+++ b/src/modules/shared/components/Contacts/Contacts.module.scss
@@ -4,6 +4,25 @@
 
 
 .content {
+
+  @include onMobile {
+    max-width: 320px;
+    margin: auto;
+    margin-top: 176px;
+  }
+ 
+  @include onTablet {
+    max-width: 490px;
+    margin: auto;
+    margin-top: 176px;
+  }
+
+  @include onDesktop {
+    max-width: 1040px;
+    margin: auto;
+    margin-top: 168px;
+  }
+
   width: 1200px;
   margin-top: 168px;
 }
@@ -17,7 +36,7 @@
 
   background-color: #fff;
   border-radius: 10px;
-  
+
   transition: transform 0.3s ease-in-out;
 }
 
@@ -30,6 +49,28 @@
 }
 
 .team_member img {
+  @include onMobile {
+    width: 125px;
+    height: 125px;
+  }
+
+  @include onTablet {
+    width: 150px;
+    height: 150px;
+  }
+
+  @include onDesktop {
+    padding: 10px;
+    overflow: hidden;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: auto;
+    transition: 0.3s ease-in-out;
+  }
+
+
   padding: 10px;
   overflow: hidden;
   width: 300px;
@@ -37,7 +78,7 @@
   border-radius: 50%;
   object-fit: cover;
   margin:auto;
-  transition:  0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 .team_member h3 {
@@ -58,24 +99,24 @@
   transition: 0.5s;
 }
 
-.s{
+.s {
   width: 30px;
   height: 30px;
   transition: 0.5s;
 }
 
 .l {
-  margin-right: 5px ;
+  margin-right: 5px;
   transition: 0.5s;
 }
 
 
-.i:hover{
+.i:hover {
   transform: scale(1.2);
   fill: #007AFF;
 }
 
-.s:hover{
+.s:hover {
   transform: scale(1.2);
   fill: #808080;
 }
