--- a/src/modules/HomePage/HomePage.module.scss
+++ b/src/modules/HomePage/HomePage.module.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   max-width: 290px;
   margin: 0 auto;
-  padding-top: 95px;
+  // padding-top: 95px;
 
   @media (min-width: 576px) {
     max-width: 592px;
