--- a/src/modules/shared/components/HeaderComponent/Header.module.scss
+++ b/src/modules/shared/components/HeaderComponent/Header.module.scss
@@ -12,7 +12,7 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid $icons-color;
+  border-bottom: 1px solid $icons-color;
   background-color: $white-color;  
 }
 
