--- a/src/modules/HomePage/MainSlider/MainSlider.module.scss
+++ b/src/modules/HomePage/MainSlider/MainSlider.module.scss
@@ -1,5 +1,5 @@
-@import '../../../scssStyles/reset';
-@import './Slider_mixins.scss';
+@import "../../../scssStyles/reset";
+@import "./Slider_mixins.scss";
 
 .Mcontainer {
   max-width: 100vw;
@@ -87,7 +87,7 @@
       }
       line-height: unset;
       display: flex;
-      font-family: 'Mont';
+      font-family: "Mont";
       background: -webkit-linear-gradient(
         75deg,
         #891ce8 -22.43%,
@@ -277,25 +277,24 @@
   @include onMobile {
     display: none;
   }
-  background-image: url('../../../modules/shared/icons/Chevron-black\ \(Arrow\ Left\).svg');
+  background-image: url("../../../modules/shared/icons/Chevron-black\ \(Arrow\ Left\).svg");
   background-position: center;
   background-repeat: no-repeat;
   margin-left: -16px;
   transition: 200ms;
 
   &:focus {
-    background-image: url('../../../modules/shared/icons/Chevron-black\ \(Arrow\ Left\).svg');
+    background-image: url("../../../modules/shared/icons/Chevron-black\ \(Arrow\ Left\).svg");
     background-position: center;
     background-repeat: no-repeat;
   }
   &:hover {
     color: red;
     background-color: #b4bdc3;
-    background-image: url('../../../modules/shared/icons/Chevron-black\ \(Arrow\ Left\).svg');
+    background-image: url("../../../modules/shared/icons/Chevron-black\ \(Arrow\ Left\).svg");
     background-position: center;
     background-repeat: no-repeat;
   }
-  
 }
 
 .next_arrow {
@@ -303,7 +302,7 @@
     display: none;
   }
 
-  background-image: url('../../../modules/shared/icons/Chevron-black\ \(Arrow\ Right\).svg');
+  background-image: url("../../../modules/shared/icons/Chevron-black\ \(Arrow\ Right\).svg");
   background-position: center;
   background-repeat: no-repeat;
   margin-right: -16px;
@@ -312,20 +311,19 @@
   &:hover {
     color: red;
     background-color: #b4bdc3;
-    background-image: url('../../../modules/shared/icons/Chevron-black\ \(Arrow\ Right\).svg');
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  
-  &:focus {
-    background-image: url('../../../modules/shared/icons/Chevron-black\ \(Arrow\ Right\).svg');
+    background-image: url("../../../modules/shared/icons/Chevron-black\ \(Arrow\ Right\).svg");
     background-position: center;
     background-repeat: no-repeat;
   }
 
+  &:focus {
+    background-image: url("../../../modules/shared/icons/Chevron-black\ \(Arrow\ Right\).svg");
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
 
-.next_arrow, 
+.next_arrow,
 .prev_arrow {
   &:hover {
     cursor: pointer;
