--- a/src/modules/FavouritesPage/Favourites.module.scss
+++ b/src/modules/FavouritesPage/Favourites.module.scss
@@ -4,7 +4,7 @@
   @include onMobile {
     margin: 0 auto;
     width: 288px;
-    margin-top: 80px;
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 16px;
@@ -13,7 +13,7 @@
   @include onTablet {
     margin: 0 auto;
     width: 592px;
-    margin-top: 80px;
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     column-gap: 16px;
@@ -22,7 +22,7 @@
   @include onDesktop {
     margin: 0 auto;
     width: 1136px;
-    margin-top: 80px;
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(24, 1fr);
     column-gap: 16px;
@@ -210,4 +210,12 @@
 .right:disabled {
   border: 1px solid #e2e6e9;
   opacity: 0.5;
+}
+
+.buttons__box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 70px 0 30px;
+  height: 30px;
 }
