--- a/src/modules/HomePage/HeaderComponent/HeaderComponent.module.scss
+++ b/src/modules/HomePage/HeaderComponent/HeaderComponent.module.scss
@@ -6,7 +6,7 @@
   font-size: 32px;
   line-height: 41px;
   letter-spacing: -0.01em;
-  
+  padding-left: 10px;
 
   @include onTablet {
     padding-top: 100px;
