added hover to pagination

--- a/src/modules/shared/components/Pagination/Pagination.module.scss
+++ b/src/modules/shared/components/Pagination/Pagination.module.scss
@@ -71,6 +71,10 @@
   border: 1px solid #b4bdc3;
   object-fit: contain;
   transition: 300ms;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .left:hover,
