back_btn hover fixed

--- a/src/modules/shared/components/BackBtn/backBtn.module.scss
+++ b/src/modules/shared/components/BackBtn/backBtn.module.scss
@@ -20,11 +20,16 @@
   transition: color 0.4s;
   &:hover {
     color: $primary-color;
+    cursor: pointer;
   }
 }
 
 .ChevronLeft {
   path {
     fill: $primary-color;
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
