favourites empty add

--- a/src/modules/CartPage/cartItem/CartItem.module.scss
+++ b/src/modules/CartPage/cartItem/CartItem.module.scss
@@ -21,9 +21,10 @@
   border-radius: 16px;
   min-width: 200px;
   background-color: $white-color;
-  transition: box-shadow 0.4s;
+    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.0);
+    transition: box-shadow 0.5s ease;
   &:hover {
-    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 15px 0 rgba(0, 0, 0, 0.3);
   }
 
   @include onTablet {
