--- a/src/modules/PhoneDetailsPage/PhoneDetails/PhoneDetails.module.scss
+++ b/src/modules/PhoneDetailsPage/PhoneDetails/PhoneDetails.module.scss
@@ -74,6 +74,10 @@ $mobile_color-gold: #fcdbc1;
     background-color: $primary-color;
     border: 1px solid $primary-color;
     color: $white-color;
+
+    &:hover {
+      cursor: not-allowed;
+    } 
   }
 }
 
@@ -152,6 +156,7 @@ $mobile_color-gold: #fcdbc1;
 }
 
 .selected:hover {
+  cursor: not-allowed;
   box-shadow: 0 0 0 1px $primary-color;
 }
 
@@ -190,17 +195,21 @@ $mobile_color-gold: #fcdbc1;
     left: 100px;
     font-weight:800;
     top: 180px;
-    width: 592px;
   }
 
   @include onDesktop {
-    width: 1200px;
-    white-space: nowrap;
     font-size: 32px;
     top: 170px;
     left: 390px;
     font-family: 'Mont';
     font-weight: 800;
     line-height: 41px;
+  }
+
+  @media((min-width: 463px) and (max-width: 627px)) {
+    left: 10%;
+    top: 150px;
+    font-size: 22px;
+    line-height: 31px;
   }
 }
